infrastructure/keycloak/cr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    istio.io/rev: stable
    name: keycloak
