infrastructure/keycloak/cr/service-echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: "${infranamespaceprefix}keycloak"
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv6
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    run: echo
  type: ClusterIP
