infrastructure/keycloak/cr/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  hosts:
  - identity.pauwelslabs.com
  gateways:
  - istio-ingress/pauwels-labs
  http:
  - name: "keycloak"
    route:
    - destination:
        port:
          number: 8080
        host: keycloak-service
